--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,10 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
     /*implementation 'org.springframework.boot:spring-boot-starter-security'*/
     compile 'org.springframework.boot:spring-boot-starter-web'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
