--- a/travis.yml
+++ b/travis.yml
@@ -14,6 +14,11 @@ cache:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r family-gentime *
+  - mkdir -p deploy
+  - mv family-gentime.zip deploy/family-gentime.zip
+
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
