--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
     /*implementation 'org.springframework.boot:spring-boot-starter-security'*/
     compile 'org.springframework.boot:spring-boot-starter-web'
-
+    compile("org.mariadb.jdbc:mariadb-java-client")
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
