--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
     /*implementation 'org.springframework.boot:spring-boot-starter-security'*/
-    compile 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     compile("org.mariadb.jdbc:mariadb-java-client")
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
