--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,11 @@ spring:
 spring:
   profiles: local
   datasource:
-    #data: classpath:data-h2.sql # 시작할때 실행시킬 script
+    data: classpath:data-h2.sql # 시작할때 실행시킬 script
+  #jpa:
+  #  show-sql: true
+  #  hibernate:
+  #    ddl-auto: create-drop
   h2:
     console:
       enabled: true
